syntax = "proto3";

package mvauthpb;

message AccessTokenEntity {
  string token = 1;
  string created = 2;
  string last_used = 3;
  int64 expires = 4;
  int64 uses = 5;
  repeated string allowed_grpc = 6;
  repeated string allowed_httpjson = 7;
  int64 client_id = 8;
}

message AccessTokenCreateTempRequest {
  int64 expires = 1;
  int64 uses = 2;
  repeated string allowed_grpc = 3;
  repeated string allowed_httpjson = 4;  
  int64 client_id = 5;
}

message AccessTokenCreateTempResponse {
  string token = 1;
}

message AccessTokenValidateGrpcRequest {
  string token = 1;
  string method = 2;
}

message AccessTokenValidateHttpjsonRequest {
  string token = 1;
  string url = 2;
}

message AccessTokenValidateResponse {
  bool valid = 1;
  int64 seconds_left = 2;
  int64 uses_left = 3;  
  int64 client_id = 4;
  repeated string allowed_grpc = 5;
  repeated string allowed_httpjson = 6;  
}

enum AuthTokenType {
  TOKEN_DEFAULT = 0;
  TOKEN_TMC = 1;
}

enum RequestTransport {
  TRANSPORT_NONE = 0;
  TRANSPORT_GRPC = 1;
  TRANSPORT_HTTPJSON = 2;
}

message RequestContextEntity {
  string auth_token = 1;
  AuthTokenType auth_token_type = 2;
  string service_name = 3;
  string service_org = 4;
  RequestTransport transport = 5;
  string request_url = 6;
  string request_method = 7;
  int64 client_id = 8;
}
